--- a/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-regulator.dtsi
@@ -843,7 +843,8 @@
 					 844800000  960000000 1036800000
 					1113600000 1190400000 1228800000
 					1324800000 1401600000 1593600000
-					1728000000>,
+					1728000000 1824000000 1920000000
+					1996800000>,
 #else
 					<307200000  422400000  480000000
 					 556800000  652800000  729600000
@@ -979,10 +980,10 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000) (-85000) (-65000) (-15000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-40000) (-5000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-40000) (-5000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-13000) (-14000) (-15000) (-18000)
@@ -996,10 +997,10 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000) (-85000) (-85000) (-85000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-13000) (-14000) (-15000) (-18000)
@@ -1039,7 +1040,7 @@
 					/* Speed bin 3 */
 				       <0 0 0 0 (-50000) 0 0 0 0 0 0 0 0 0 0 0>;
 
-				qcom,cpr-closed-loop-voltage-adjustment =
+				qcom,cpr-closed-loop-voltage-adjustment =CONFIG_MSM8996
 					/* Speed bin 0 */
 #ifdef CONFIG_MSM8996_CPU_OVERCLOCK
 #ifdef CONFIG_SWAN2K_UNDERVOLTS_UNSAFE
@@ -1048,10 +1049,10 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000) (-85000) (-65000) (-15000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-40000) (-5000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-30000) (-5000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-13000) (-14000) (-15000) (-18000)
@@ -1065,10 +1066,10 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000) (-85000) (-85000) (-85000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-13000) (-14000) (-15000) (-18000)
@@ -1780,7 +1781,8 @@
 					1478400000 1555200000 1632000000
 					1708800000 1785600000 1824000000
 					1920000000 1996800000 2150400000
-					2265600000>,
+					2265600000 2340000000 2415000000
+					2496000000>,
 #else
 					<307200000  403200000  480000000
 					 556800000  652800000  729600000
@@ -1929,13 +1931,13 @@
 					 (-85000) (-85000) (-85000) (-65000)
 					 (-45000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-40000)
-					 (-20000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-30000)
+					 (-10000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-11000) (-12000) (-13000) (-14000)
@@ -1955,13 +1957,13 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-11000) (-12000) (-13000) (-14000)
@@ -2027,13 +2029,13 @@
 					 (-85000) (-85000) (-85000) (-65000)
 					 (-45000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-40000)
-					 (-20000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-30000)
+					 (-10000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-11000) (-12000) (-13000) (-14000)
@@ -2053,13 +2055,13 @@
 					 (-85000) (-85000) (-85000) (-85000)
 					 (-85000)>,
 #elif CONFIG_SWAN2K_UNDERVOLTS_SAFE
-					<(-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000) (-60000) (-60000) (-60000)
-					 (-60000)>,
+					<(-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000) (-50000) (-50000) (-50000)
+					 (-50000)>,
 #else
 					<(-15000) (-15000) (-15000) (-15000)
 					 (-11000) (-12000) (-13000) (-14000)
